Add Custom Proggres Indicator Column

--- a/incidents-managment/app/incidents/webapp/i18n/i18n.properties
+++ b/incidents-managment/app/incidents/webapp/i18n/i18n.properties
@@ -37,3 +37,7 @@ customTableForConversations=Custom Table For Conversations
 
 #XCOL: Custom column header text
 customDate=Custom Date
+
+#XCOL: Custom column header text
+status=Status
+
